# ravaged-planets

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
cmake/modules/: FindAssimp.cmake  FindENet.cmake  FindLua.cmake  FindLuabind.cmake  FindSDL2.cmake  FindSDL_mixer.cmake
data/blender/: marker.blend  marker.blend1
deploy/: default.conf
deploy/entities/: factory.entity  factory.wwentity  missile-expl.entity  missile-expl.wwentity  missile.entity  missile.wwentity  simple-tank.entity  simple-tank.wwentity  wheeled-car.entity  wheeled-car.wwentity.bak
deploy/etc/: ravaged-planets.conf
deploy/lang/: en.lang  ko.lang
deploy/meshes/: factory.mesh  marker.mesh  missile.mesh  tank-tracks.mesh
deploy/particles/: explosion-01.part  factory-smoke.part  missile.part
deploy/shaders/: basic.shader  common.shader  entity.shader  gui.shader  (+4 more)
include/: config.h.in  linmath.h  utf8.h
src/font-test/: CMakeLists.txt  main.cc
src/framework/: CMakeLists.txt  audio.cc  audio.h  bitmap.cc  bitmap.h  camera.cc  camera.h  color.h  colour.h  cursor.cc  cursor.h  debug_view.cc  debug_view.h  effect.cc  effect.cpp  exception.cc  exception.h  font.cc  font.h  framework.cc  framework.h  graphics.cc  graphics.h  http.cc  http.cpp  http.h  index_buffer.cc  input.cc  input.h  lang.cc  lang.h  logging.cc  logging.h  lua.cc  lua.h  lua_context.cc  math.h  misc.cc  misc.h  model.cc  (+61 more)
src/framework/arch/linux/: bitmap.cpp  exception.cc  input.cpp  misc.cc  paths.cc  stack_trace.cc
src/framework/arch/win32/: exception.cc  misc.cc  paths.cc  stack_trace.cc  stack_walker.cc  stack_walker.h
src/framework/gui/: builder.h  button.cc  button.h  checkbox.cc  checkbox.h  drawable.cc  drawable.h  grid_layout.cc  grid_layout.h  gui.cc  gui.h  label.cc  label.h  linear_layout.cc  linear_layout.h  listbox.cc  listbox.h  slider.cc  slider.h  static_widget.cc  text.cc  textedit.cc  textedit.h  widget.cc  widget.h  window.cc  window.h
src/framework/lua/: base.h  callback.h  error.cc  error.h  metatable.h  method.h  push.h  reference.cc  reference.h  table.h  userdata.h  value.cc  value.h
src/framework/stb/: image.cc  textedit.cc  vorbis.cc
src/game/: CMakeLists.txt  application.cc  application.h  main.cc  settings.cc  settings.h
src/game/ai/: ai_player.cc  ai_player.h  ai_scriptmgr.cc  ai_scriptmgr.h  pathing_thread.cc  pathing_thread.h  script_manager.cc  script_manager.h  unit_wrapper.cc  unit_wrapper.h  update_queue.cc  update_queue.h
src/game/editor/: editor_screen.cc  editor_screen.h  editor_terrain.cc  editor_terrain.h  editor_world.cc  editor_world.cpp  editor_world.h  world_writer.cc  world_writer.cpp  world_writer.h
src/game/editor/.svn/: entries
src/game/editor/.svn/text-base/: editor_screen.cpp.svn-base  editor_screen.h.svn-base  editor_terrain.cpp.svn-base  editor_terrain.h.svn-base  editor_world.h.svn-base
src/game/editor/tools/: heightfield_tool.cc  heightfield_tool.cpp  heightfield_tool.h  indicator_node.cc  indicator_node.h  pathing_tool.cc  pathing_tool.h  players_tool.cc  players_tool.h  texture_tool.cc  texture_tool.h  tools.cc  tools.h
src/game/editor/tools/.svn/: entries
src/game/editor/tools/.svn/prop-base/: pathing_tool.h.svn-base
src/game/editor/tools/.svn/text-base/: heightfield_tool.h.svn-base  pathing_tool.cpp.svn-base  pathing_tool.h.svn-base  players_tool.cpp.svn-base  players_tool.h.svn-base  texture_tool.cpp.svn-base  texture_tool.h.svn-base  tools.cpp.svn-base  tools.h.svn-base
src/game/editor/windows/: main_menu.cc  main_menu.h  message_box.cc  message_box.cpp  message_box.h  new_map.cc  new_map.cpp  new_map.h  open_file.cc  open_file.cpp  open_file.h  open_map.cc  open_map.cpp  open_map.h  save_map.cc  save_map.cpp  save_map.h
src/game/editor/windows/.svn/: entries
src/game/editor/windows/.svn/text-base/: main_menu.cpp.svn-base  main_menu.h.svn-base  message_box.cpp.svn-base  message_box.h.svn-base  new_map.h.svn-base  open_file.cpp.svn-base  open_file.h.svn-base  open_map.cpp.svn-base  open_map.h.svn-base  save_map.cpp.svn-base  save_map.h.svn-base
src/game/entities/: audio_component.cc  audio_component.cpp  audio_component.h  buildable_component.cc  buildable_component.cpp  buildable_component.h  builder_component.cc  builder_component.cpp  builder_component.h  damageable_component.cc  damageable_component.cpp  damageable_component.h  entity.cc  entity.cpp  entity.h  entity_attribute.cc  entity_attribute.cpp  entity_attribute.h  entity_debug.cc  entity_debug.cpp  entity_debug.h  entity_factory.cc  entity_factory.cpp  entity_factory.h  entity_manager.cc  entity_manager.cpp  entity_manager.h  mesh_component.cc  mesh_component.cpp  mesh_component.h  minimap_visible_component.cc  minimap_visible_component.cpp  minimap_visible_component.h  moveable_component.cc  moveable_component.cpp  moveable_component.h  orderable_component.cc  orderable_component.cpp  orderable_component.h  ownable_component.cc  (+20 more)
src/game/screens/: game_screen.cc  game_screen.h  screen.cc  screen.h  title_screen.cc  title_screen.h
src/game/screens/hud/: build_window.cc  build_window.h  minimap_window.cc  minimap_window.h  pause_window.cc  pause_window.h
src/game/screens/title/: join_game_window.cpp  join_game_window.h  login_box_window.cpp  login_box_window.h  main_menu_window.cc  main_menu_window.h  new_ai_player_window.cc  new_ai_player_window.cpp  new_ai_player_window.h  new_game_window.cc  new_game_window.h  player_properties_window.cpp  player_properties_window.h
src/game/session/: session.cc  session.cpp  session.h  session_request.cc  session_request.cpp  session_request.h
src/game/simulation/: commands.cc  commands.h  local_player.cc  local_player.h  orders.cc  orders.h  packets.cc  packets.h  player.cc  player.h  remote_player.cc  remote_player.h  simulation_thread.cc  simulation_thread.h
src/game/world/: cursor_handler.cc  cursor_handler.h  terrain.cc  terrain.h  terrain_helper.cc  terrain_helper.h  world.cc  world.h  world_reader.cc  world_reader.h  world_vfs.cc  world_vfs.h
src/meshexp/: CMakeLists.txt  main.cc
(+172 files in other folders)
